# elk

./: .gitignore  README.md  docker-compose-jenkins.yml  docker-compose.yml  pyproject.toml
otel-collector/: README.md  docker-compose.yaml  otel-collector-config.yaml
python_telemetry/: pyproject.toml
python_telemetry/python_telemetry/: app.py
services/js_app/: README.md  app.js  package-lock.json  package.json
services/python_app/: README.md  pyproject.toml
services/python_app/python_app/: app.py
telemetry/: .env  .gitignore  README.md  docker-compose-fleet-agent.yml  docker-compose-fleet-server-agent.yml  docker-compose-fleet-server.yml  docker-compose-fluentbit.yml  docker-compose.yml  generate_fleet_certificate.sh  install_fleet.sh  otel-collector-config.yaml
telemetry/apm-server/: apm-server.yml
telemetry/beats/config/: auditbeat.yml  filebeat.yml
telemetry/elastic-agent/: elastic-agent.yml
telemetry/elasticsearch/config/: elasticsearch.yml
telemetry/elasticsearch/setup/: create_certs.sh  setup.sh
telemetry/fluent-bit/: fluent-bit.conf  parsers.conf
telemetry/logstash/: logstash.yml  pipelines.yml
telemetry/logstash/pipelines/: pipeline-agent.conf  pipeline-beats.conf  pipeline.conf
